--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -262,16 +262,16 @@ action.select.all = Select all
 
 button.accept = Accept
 button.reject = Reject
-button.add = Add
+button.add = A&dd
 button.add.a.contact = Add a contact
 button.add.bookmark = Add bookmark
 button.add.service = Add service
 button.add.user = Add user
 button.add2 = Add
-button.advanced = Advanced
+button.advanced = A&dvanced
 button.approve = Approve
 button.bookmark.room = Bookmark room
-button.browse = Browse...
+button.browse = &Browse...
 button.browse2 = Browse...
 button.browse3 = Browse...
 button.cancel = Cancel
@@ -308,39 +308,39 @@ button.update = Update
 button.view.notes = View notes
 button.view.profile = View full profile
 button.view.tasklist = View task list
-button.re.detect = Re-detect
+button.re.detect = &Re-detect
 
-checkbox.allow.buzz = Allow users to buzz you
+checkbox.allow.buzz = Allow users to &buzz you
 checkbox.auto.discover.port = Automatically discover host and port
-checkbox.auto.login = Auto login
-checkbox.disable.chat.history = Disable chat history
-checkbox.disable.prev.chat.history = Disable showing previous conversation in chat
-checkbox.enable.emoticons = Enable emoticons
-checkbox.idle.enabled = Idle enabled
-checkbox.launch.on.startup = Launch on startup
-checkbox.notify.user.comes.online = Notify when a user comes online
-checkbox.notify.user.goes.offline = Notify when a user goes offline
-checkbox.notify.typing.systemtray = Show typing notification in the system tray
-checkbox.notify.systemtray = Show new messages in the system tray
+checkbox.auto.login = &Auto login
+checkbox.disable.chat.history = &Disable chat history
+checkbox.disable.prev.chat.history = Disable &showing previous conversation in chat
+checkbox.enable.emoticons = E&nable emoticons
+checkbox.idle.enabled = &Idle enabled
+checkbox.launch.on.startup = &Launch on startup
+checkbox.notify.user.comes.online = Notify when a user &comes online
+checkbox.notify.user.goes.offline = &Notify when a user goes offline
+checkbox.notify.typing.systemtray = &Show typing notification in the system tray
+checkbox.notify.systemtray = Show new &messages in the system tray
 checkbox.permanent = Room is permanent
-checkbox.play.sound.on.invitation = Play sound when invitation is received
-checkbox.play.sound.on.new.message = Play sound when new message arrives
-checkbox.play.sound.on.outgoing.message = Play sound when message is sent
-checkbox.play.sound.when.offline = Play sound when user goes offline
+checkbox.play.sound.on.invitation = Play sound when &invitation is received
+checkbox.play.sound.on.new.message = &Play sound when new message arrives
+checkbox.play.sound.on.outgoing.message = Play sound when message is &sent
+checkbox.play.sound.when.offline = Play sound when user goes &offline
 checkbox.private.room = Room is private
-checkbox.save.password = Save password
-checkbox.show.avatars.in.contactlist = Show avatars in contact list
-checkbox.show.notifications.in.conference = Show notifications in conference rooms
-checkbox.show.time.in.chat.window = Show time in chat window
-checkbox.show.toaster = Show a toast popup
+checkbox.save.password = Sa&ve password
+checkbox.show.avatars.in.contactlist = Show &avatars in contact list
+checkbox.show.notifications.in.conference = Show &notifications in conference rooms
+checkbox.show.time.in.chat.window = Show &time in chat window
+checkbox.show.toaster = Show a &toast popup
 checkbox.split.chat.window = Dock windows (requires restart)
-checkbox.start.in.tray = Start in system tray
-checkbox.tabs.on.top = Chat tabs appear on top (requires restart)
+checkbox.start.in.tray = &Start in system tray
+checkbox.tabs.on.top = Chat tabs &appear on top (requires restart)
 checkbox.use.compression = Use compression
 checkbox.use.debugger.on.startup = Start debugger on startup
 checkbox.use.proxy.server = Use proxy server
-checkbox.use.system.look.and.feel = Use system look And feel (requires restart)
-checkbox.window.to.front = Bring window to front
+checkbox.use.system.look.and.feel = Use system &look And feel (requires restart)
+checkbox.window.to.front = Bring &window to front
 checkbox.broadcast.hide.offline.user = Hide offline user
 checkbox.use.krbconf = Use krb5.conf or krb5.ini
 checkbox.use.krb.dns = Use DNS
@@ -370,23 +370,23 @@ label.na = n/a
 label.cell = Cell
 label.work = Work
 label.home = Home
-label.accounts = Accounts
+label.accounts = A&ccounts
 label.add.conference.service = Add conference service
 label.add.jid = Add JID
 label.add.task = Add task
 label.auto.login = Auto login
 label.available.users.in.roster = Available users in roster
 label.cancel = Cancel
-label.change.password.to = Change password to
-label.chatroom.fontsize = Chat room font size:
+label.change.password.to = Change &password to
+label.chatroom.fontsize = Chat room &font size:
 label.city = City
 label.close = Close
 label.company = Company
-label.confirm.password = Confirm password
+label.confirm.password = &Confirm password
 label.conflict.error = Unable to login due to account already signed in
 label.contact.to.find = Find contact
-label.contactlist.avatarsize = Contact list avatar size:
-label.contactlist.fontsize = Contact List font size:
+label.contactlist.avatarsize = Contact list avatar &size:
+label.contactlist.fontsize = &Contact List font size:
 label.country = Country
 label.create.account = Create account
 label.department = Department
@@ -394,7 +394,7 @@ label.dial = Dial
 label.downloads = Downloads
 label.due = Due
 label.email.address = Email address
-label.emoticons = Emoticons
+label.emoticons = &Emoticons
 label.enter.address = Enter address
 label.enter.group.name = Enter new group name
 label.fax = Fax
@@ -412,7 +412,7 @@ label.local.time = Local time
 label.message = Message
 label.message.style = Message style
 label.middle.name = Middle name
-label.minutes.before.stale.chat = Minutes before an inactive room becomes stale
+label.minutes.before.stale.chat = &Minutes before an inactive room becomes stale
 label.mobile = Mobile
 label.name = Name
 label.network = Network
@@ -423,7 +423,7 @@ label.ok = OK
 label.old.ssl = Use old SSL port method
 label.os = Operating system
 label.pager = Pager
-label.password = Password
+label.password = &Password
 label.phone = Phone
 label.port = Port
 label.postal.code = Postal code
@@ -433,29 +433,29 @@ label.protocol = Protocol
 label.received = Received
 label.rename.to = Rename to
 label.resource = Resource
-label.response.timeout = Response timeout (sec)
+label.response.timeout = &Response timeout (sec)
 label.room = Room
 label.room.name = Room name
 label.room.topic= Room topic
 label.search.service = Search service
-label.server = Server
+label.server = &Server
 label.server.address = Server address
 label.show = Show:
 label.software = Software
 label.state.and.province = State/province
 label.street.address = Street address
 label.time = Time: {0}
-label.time.till.idle = Time till idle (min)
+label.time.till.idle = &Time till idle (min)
 label.timeformat = Use {0}
-label.transfer.download.directory = Download directory:
-label.transfer.timeout = Transfer timeout (min):
+label.transfer.download.directory = &Download directory:
+label.transfer.timeout = &Transfer timeout (min):
 label.unable.to.add.contact = Unable to add contact
 label.use.default = Use default
 label.user.on.public.network = User is on a public network
-label.username = Username
+label.username = &Username
 label.version = Version
 label.web.page = Web page
-label.xmpp.port = XMPP port
+label.xmpp.port = &XMPP port
 label.krb.realm = Realm
 label.krb.kdc = KDC
 label.which.pki.method = Which PKI method?
@@ -470,8 +470,8 @@ label.pkcs.library.file = PKCS#11 library file
 label.x509.certificate = X.509 certificate
 label.apple.keychain = Apple KeyChain
 label.add.to.roster = Add user to your roster
-label.audio.device = Audio device
-label.video.device = Video device
+label.audio.device = &Audio device
+label.video.device = &Video device
 
 menuitem.about = About
 menuitem.actions = Actions
@@ -480,10 +480,10 @@ menuitem.add = Add
 menuitem.add.as.contact = Add as a contact
 menuitem.add.contact = Add contact
 menuitem.add.contact.group = Add contact group
-menuitem.add.groupchat.myname = Highlight my name when someone says it
-menuitem.add.groupchat.mytext = Highlight my text when I say something
-menuitem.add.groupchat.popname= Show toast popup when someone says my name
-menuitem.add.groupchat.showjoinleavemessage = Show join and leave messages
+menuitem.add.groupchat.myname = Highlight my &name when someone says it
+menuitem.add.groupchat.mytext = &Highlight my text when I say something
+menuitem.add.groupchat.popname= Show &toast popup when someone says my name
+menuitem.add.groupchat.showjoinleavemessage = &Show join and leave messages
 menuitem.always.on.top = Always on top
 menuitem.alert.when.online = Alert when user is available
 menuitem.ban = Ban
@@ -494,7 +494,7 @@ menuitem.browse.service = Browse service
 menuitem.change.nickname = Change nickname
 menuitem.change.subject = Change subject
 menuitem.chat = Chat
-menuitem.check.for.updates = Check for updates
+menuitem.check.for.updates = Check for &updates
 menuitem.contacts = Contacts
 menuitem.copy.to = Copy to
 menuitem.delete = Delete
@@ -954,7 +954,7 @@ title.view.room.information = View room information
 title.waiting.to.call = Waiting to place call
 title.xmpp.registration = XMPP account credentials
 title.yahoo.registration = Yahoo account credentials
-title.appearance.showVCards = Show VCards in the contact list
+title.appearance.showVCards = Show &VCards in the contact list
 title.subscription.request= Subscription request
 
 tooltip.place.a.call = Place a call to this individual
