SPARK-572 - Custom status messages under "On Phone" status now show as phone icon.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@11976 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -725,7 +725,7 @@ menuitem.user.guide = Benutzerhandbuch
 menuitem.add.groupchat.myname  = Meinen &Namen hervorheben, wenn ihn jemand schreibt
 menuitem.add.groupchat.mytext  = Meinen &Text hervorheben, wenn ich etwas schreibe
 menuitem.add.groupchat.popname = &Zeige ein Popup, wenn jemand meinen Namen schreibt
-menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den &Raum betritt oder verlässt 
+menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den Raum betritt oder verlässt 
 menuitem.show.offline.users = Zeige Offline User
 menuitem.expand.all.groups = Öffne alle Gruppen
 menuitem.collapse.all.groups = Schließe alle Gruppen
@@ -738,6 +738,12 @@ menuitem.expand.all.groups = Öffne alle Gruppen
 menuitem.collapse.all.groups = Schließe alle Gruppen
 
 menuitem.chatframe.option = Einstellungen
+
+status.away = Abwesend
+status.custom.messages = Benutzerdefinierte Nachricht
+status.do.not.disturb = Nicht stören
+status.on.phone = Am Telefon
+status.online = Verfügbar
 
 tree.conference.services = Konferenzen
 tree.users.in.room = Teilnehmer im Raum
