--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -215,6 +215,8 @@
 ##     Added key: 'menuitem.unblock.contact'
 ##     Removed key: 'status.available'
 ##     Added key: 'message.nickname.not.acceptable'
+##     Added key: 'button.login'
+
 
 accept = Accept
 active = Active
@@ -286,6 +288,7 @@ button.dial.number = Dial number
 button.find = Find
 button.join = Join
 button.join.room = Join selected room
+button.login = &Login
 button.new = New
 button.profile = Profile
 button.quit = Quit
