--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -613,7 +613,7 @@ title.lookup.profile = Profil suchen
 title.add.search.service = Such-Service hinzufügen
 title.person.search = Suche nach Personen
 title.login.settings = Login Einstellungen
-title.login = &Login
+title.login = Login
 title.downloading.im.client = Download IM Programm
 title.upgrading.client = Programm upgraden
 title.cancelled = Abgebrochen
