SPARK-1086 Updated to name the window as Broadcast from Administrator vs. Broadcast from Broadcast.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12041 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -216,11 +216,12 @@
 ##     Removed key: 'status.available'
 ##     Added key: 'message.nickname.not.acceptable'
 ##     Added key: 'button.login'
-
+##     Added key: 'administrator'
 
 accept = Accept
 active = Active
 add = Add
+administrator = Administrator
 answer = Answer
 apply = Apply
 available = Available
