Spark-1233 - Mouse Click on Avatar in vCard Preview opens another vCard Preview - Update in German locale
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12057 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -191,7 +191,7 @@ button.start.chat = Chat
 button.send.email = Email
 button.send = Senden
 button.unset.file.explorer = entferne gespeicherten File Browser
-button.view.profile = Gesamte Profile anzeigen
+button.view.profile = Gesamtes Profil anzeigen
 
 checkbox.save.password = Pass&wort speichern
 checkbox.auto.login = &Automatisches Login
@@ -279,6 +279,9 @@ label.number = &Nummer
 label.dial = &W‰hlen
 label.minutes.before.stale.chat = &Ein Chatfenster als 'inaktiv' kennzeichnen nach (min)
 label.company = &Firma
+label.cell = &Mobil
+label.work = &Gesch‰ftlich
+label.home = &Privat   
 label.street.address = &Straﬂe
 label.city = Sta&dt
 label.state.and.province = Staat/&Region
