Polish and Lithuanian Locales:  - updated Lithuanian  - added Polish
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12078 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -262,6 +262,7 @@ button.dial.number = Numeris &skambinimui
 button.find = &Ie\u0161koti
 button.join = &Prisijungti
 button.join.room = Prisijungti prie pasirinktojo &kambario
+button.login = &Prisijungti
 button.new = &Nauja
 button.profile = &Profilis
 button.quit = &Baigti
