Adding new Feature:
in MUCs you can now toggle between showing icons from presence
or showing icons from MUC.Role(e.g moderator,participant,visitor)

toggle in : Preferences -> 
GroupChat/Conference -> 
[ x ] Show chatroleicons instead of statusicons


Added some missing german locales

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12093 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -217,6 +217,7 @@
 ##     Added key: 'message.nickname.not.acceptable'
 ##     Added key: 'button.login'
 ##     Added key: 'administrator'
+##     Added key: 'menuitem.add.groupchat.showrolesinsteadofstatus'
 
 accept = Accept
 active = Active
@@ -488,6 +489,7 @@ menuitem.add.groupchat.myname = Highlight my &name when someone says it
 menuitem.add.groupchat.mytext = &Highlight my text when I say something
 menuitem.add.groupchat.popname= Show &toast popup when someone says my name
 menuitem.add.groupchat.showjoinleavemessage = &Show join and leave messages
+menuitem.add.groupchat.showrolesinsteadofstatus = Show chatroleicons instead of statusicons
 menuitem.always.on.top = Always on top
 menuitem.alert.when.online = Alert when user is available
 menuitem.ban = Ban
