--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -115,6 +115,14 @@
 ##	   Added key: 'title.group.chat.settings'
 ##	   Added key: 'menuitem.view.logs'
 ##	   Added key: 'title.appearance.preferences'
+## 2.6.0 beta 1
+##     Added key: 'menuitem.block.contact'
+##     Added key: 'menuitem.unblock.contact'
+##     Removed key: 'status.available'
+##     Added key: 'message.nickname.not.acceptable'
+##     Added key: 'button.login'
+##     Added key: 'administrator'
+##     Added key: 'menuitem.add.groupchat.showrolesinsteadofstatus'
 
 
 
@@ -122,6 +130,7 @@
 
 ok = Ok
 apply = Übernehmen
+administrator = Administrator
 cancel = Abbrechen
 add = Hinzufügen
 use.default = Voreinstellungen laden
@@ -177,6 +186,8 @@ button.update = &Update
 button.cancel = &Abbrechen
 button.decline = &Ablehnen
 button.join = &Beitreten
+button.join.room = Ausgewähltem Raum beitreten
+button.login = &Login
 button.save.for.future.use = &Speichern für die spätere Verwendung
 button.register = &Registrierung
 button.dial.number = &Nummer wählen
@@ -215,6 +226,7 @@ checkbox.start.in.tray = Spark automatisch in der &Taskleiste starten
 checkbox.split.chat.window = &Fenster 'andocken' (benötigt Neustart von Spark)
 checkbox.tabs.on.top = &Chat tabs oben anzeigen (benötigt Neustart von Spark)
 checkbox.allow.buzz = "&Buzzer" Funktion aktivieren.
+checkbox.tabs.externalize = Neue Chat Tabs öffnen in seperaten Fenstern
 checkbox.enable.emoticons = &Emoticons aktivieren 
 checkbox.use.system.look.and.feel = System Look And &Feel verwenden (benötigt Neustart von Spark)
 checkbox.notify.user.comes.online = &Benachrichtigen, wenn ein User Online kommt
@@ -357,6 +369,8 @@ message.close.other.chats = Alle anderen Chats schließen
 message.close.stale.chats = Inaktive Chats schließen 
 message.last.message.received = Letzte Nachricht empfangen um {0}
 message.shared.group = Gemeinsame Gruppen
+message.internalize.tab = Chatroom wieder in Tabliste einbinden
+message.externalize.tab = Chatroom in externes Fenster auslagern
 message.is.shared.group = {0} ist eine gemeinsame Gruppe.
 message.delete.confirmation = {0} - Wirklich löschen?
 message.idle.for = Inaktiv seit {0}
@@ -386,6 +400,7 @@ message.you.have.been.kicked = Sie wurden aus dem Raum ausgeladen.
 message.kicked.error = Sie haben nicht das Recht {0} aus dem Raum auszuladen.
 message.you.have.been.banned = Der Zugriff auf diesem Raum wurde Ihnen entzogen.
 message.nickname.in.use = Ausgewählter Name ist bereits in Benutzung. Bitte einen anderen Namen wählen.
+message.nickname.not.acceptable = Das ändern von Spitzname ist nicht erlaubt!
 message.update.room.list = Aktualisiere Raumliste
 message.join.conference.room = Konferenz beitreten
 message.select.add.room.to.add = Bitte einen Raum wählen um ihn der Service-Liste hinzuzufügen.
@@ -691,6 +706,8 @@ menuitem.remove = Entfernen
 menuitem.change.nickname = Angezeigten Namen ändern
 menuitem.block.user = Teilnehmer blockieren
 menuitem.unblock.user = Blockierung eines Teilnehmers aufheben
+menuitem.block.contact = Kontakt blockieren
+menuitem.unblock.contact = Blockierung eines Kontaktes aufheben
 menuitem.kick.user = Teilnehmer aus der Konferenz ausschließen
 menuitem.voice = Schreibrecht
 menuitem.revoke.voice = Schreibrecht entziehen
@@ -729,6 +746,7 @@ menuitem.add.groupchat.myname  = Meinen &Namen hervorheben, wenn ihn jemand schr
 menuitem.add.groupchat.mytext  = Meinen &Text hervorheben, wenn ich etwas schreibe
 menuitem.add.groupchat.popname = &Zeige ein Popup, wenn jemand meinen Namen schreibt
 menuitem.add.groupchat.showjoinleavemessage = Zeige an wenn jemand den Raum betritt oder verlässt 
+menuitem.add.groupchat.showrolesinsteadofstatus = Zeige Chatrecht-Icons anstelle von Statusicons
 menuitem.show.offline.users = Zeige Offline User
 menuitem.expand.all.groups = Öffne alle Gruppen
 menuitem.collapse.all.groups = Schließe alle Gruppen
