Fixed missing and double items in german language Fixed missing and double items in english language
attached CompareLocales.java so you can easily compare your own language to the standard language file(english)
just change the path and your good to go

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12095 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -441,7 +441,7 @@ label.resource = Resource
 label.response.timeout = &Response timeout (sec)
 label.room = Room
 label.room.name = Room name
-label.room.topic= Room topic
+label.room.topic = Room topic
 label.search.service = Search service
 label.server = &Server
 label.server.address = Server address
@@ -487,7 +487,7 @@ menuitem.add.contact = Add contact
 menuitem.add.contact.group = Add contact group
 menuitem.add.groupchat.myname = Highlight my &name when someone says it
 menuitem.add.groupchat.mytext = &Highlight my text when I say something
-menuitem.add.groupchat.popname= Show &toast popup when someone says my name
+menuitem.add.groupchat.popname = Show &toast popup when someone says my name
 menuitem.add.groupchat.showjoinleavemessage = &Show join and leave messages
 menuitem.add.groupchat.showrolesinsteadofstatus = Show chatroleicons instead of statusicons
 menuitem.always.on.top = Always on top
@@ -900,6 +900,7 @@ title.gtalk.registration = GTalk account credentials
 title.history.for = Conversation history for {0}
 title.icq.registration = ICQ account credentials
 title.irc.registration = IRC account credentials
+title.aim.registration = AIM account credentials
 title.sametime.registration = Sametime account credentials
 title.facebook.registration = Facebook account credentials
 title.myspace.registration = MySpace account credentials
@@ -961,7 +962,7 @@ title.waiting.to.call = Waiting to place call
 title.xmpp.registration = XMPP account credentials
 title.yahoo.registration = Yahoo account credentials
 title.appearance.showVCards = Show &VCards in the contact list
-title.subscription.request= Subscription request
+title.subscription.request = Subscription request
 
 tooltip.place.a.call = Place a call to this individual
 tooltip.appearance = Change the appearance of your conversations
@@ -976,3 +977,4 @@ tooltip.view.readme = View readme
 
 tree.conference.services = Conference services
 tree.users.in.room = Users in room
+#!#
